--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         /* Language Toggle Button */
         .language-toggle {
             position: fixed;
-            top: 60px;
-            right: 10px;
+            bottom: 24px;
+            right: 24px;
             z-index: 1000;
             background: rgba(251, 146, 60, 0.9);
             backdrop-filter: blur(10px);
