--- a/about.html
+++ b/about.html
@@ -31,13 +31,27 @@
             box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
         }
         .language-toggle {
-            position: fixed; top: 60px; right: 10px; z-index: 1000;
-            background: rgba(251, 146, 60, 0.9); backdrop-filter: blur(10px);
-            border: none; color: white; padding: 8px 16px; border-radius: 20px;
-            font-size: 14px; font-weight: 600; cursor: pointer; transition: all 0.3s ease;
+            position: fixed;
+            bottom: 24px;
+            right: 24px;
+            z-index: 1000;
+            background: rgba(251, 146, 60, 0.9);
+            backdrop-filter: blur(10px);
+            border: none;
+            color: white;
+            padding: 8px 16px;
+            border-radius: 20px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
         }
-        .language-toggle:hover { background: rgba(251, 146, 60, 1); transform: translateY(-2px); box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2); }
+        .language-toggle:hover {
+            background: rgba(251, 146, 60, 1);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
+        }
         .lang-zh { display: block; }
         .lang-en { display: none; }
         [data-lang="en"] .lang-zh { display: none; }
