--- a/gallery.html
+++ b/gallery.html
@@ -126,6 +126,30 @@
             text-align: center;
         }
         
+        /* 语言切换按钮样式 */
+        .language-toggle {
+            position: fixed;
+            bottom: 24px;
+            right: 24px;
+            z-index: 1000;
+            background: rgba(251, 146, 60, 0.9);
+            backdrop-filter: blur(10px);
+            border: none;
+            color: white;
+            padding: 8px 16px;
+            border-radius: 20px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        }
+        .language-toggle:hover {
+            background: rgba(251, 146, 60, 1);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
+        }
+        
         /* 响应式调整 */
         @media (max-width: 768px) {
             .modal-content {
