--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             }
             
             .language-toggle {
-                top: 15px;
+                /* top: 15px; */
                 right: 15px;
                 padding: 6px 12px;
                 font-size: 12px;
