--- a/pricing.html
+++ b/pricing.html
@@ -88,9 +88,9 @@
             <!-- Page Header -->
             <div class="text-center mb-12">
                 <h1 id="pricing-title" class="text-4xl font-bold text-gray-800 mb-4 lang-zh">课程价格表</h1>
-                <h1 id="pricing-title-en" class="text-4xl font-bold text-gray-800 mb-4 lang-en" style="display:none">Pricing Table</h1>
+                <h1 id="pricing-title-en" class="text-4xl font-bold text-gray-800 mb-4 lang-en">Pricing Table</h1>
                 <p id="pricing-desc" class="text-lg text-gray-600 lang-zh">无隐藏费用(包含材料费)</p>
-                <p id="pricing-desc-en" class="text-lg text-gray-600 lang-en" style="display:none">No hidden fees</p>
+                <p id="pricing-desc-en" class="text-lg text-gray-600 lang-en">No hidden fees(materials included)</p>
                 <div class="w-24 h-1 bg-gradient-to-r from-orange-400 to-amber-400 mx-auto mt-4 rounded-full"></div>
             </div>
             <!-- Pricing Table -->
