--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CC Art 户外丙烯写生课</title>
+    <title>CC Art 户外丙烯写生课招生啦！</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
@@ -1002,8 +1002,8 @@
                             <span class="lang-en">📞 Phone: 626-726-7965</span>
                         </span>
                         <span class="text-orange-600 font-semibold">
-                            <span class="lang-zh">💬 微信: xxxi_zc</span>
-                            <span class="lang-en">💬 WeChat: xxxi_zc</span>
+                            <span class="lang-zh">💬 微信: xxxi_zc 或 a747594101</span>
+                            <span class="lang-en">💬 WeChat: xxxi_zc 或 a747594101</span>
                         </span>
                         <span class="text-orange-600 font-semibold">
                             <span class="lang-zh">📧 邮箱: ccartirvine@gmail.com</span>
@@ -1020,6 +1020,15 @@
                     <span class="lang-en">* Course prices subject to change. Latest announcements prevail | CC Art All Rights Reserved</span>
                 </p>
             </div>
+        </div>
+    </div>
+
+    <!-- 地点 Section -->
+    <div class="flex justify-center mt-8">
+        <div class="bg-orange-50 rounded-xl px-6 py-3 flex items-center space-x-3 shadow-md">
+            <span class="text-orange-500 text-xl">📍</span>
+            <span class="lang-zh font-semibold">Irvine Great Park 大公园</span>
+            <span class="lang-en font-semibold">Irvine Great Park (Da Gong Yuan)</span>
         </div>
     </div>
 
