--- a/pricing.html
+++ b/pricing.html
@@ -117,7 +117,7 @@
                 * 所有价格均为美元 | 课程价格如有调整，以最新公布为准
             </p>
             <p class="text-gray-500 text-sm">
-                CC Art 版权所有 © 2025 | 咨询: 626-726-7965 | 微信: xxxi_zc
+                CC Art 版权所有 © 2025 | 咨询: 626-726-7965 | 微信: xxxi_zc 或 a747594101
             </p>
         </div>
     </footer>
