--- a/about.html
+++ b/about.html
@@ -534,7 +534,7 @@
                                   <span class="lang-zh">微信咨询</span>
                                   <span class="lang-en">WeChat</span>
                                 </h4>
-                                <p class="text-gray-600 text-lg">xxxi_zc</p>
+                                <p class="text-gray-600 text-lg">xxxi_zc 或 a747594101</p>
                             </div>
                         </div>
                         <div class="flex items-center">
@@ -615,8 +615,8 @@
                       <span class="lang-en">Dedicated teaching, helping every student discover the beauty of art</span>
                     </p>
                     <p class="text-gray-500 text-base">
-                      <span class="lang-zh">CC Art 版权所有 © 2025 | 咨询: 626-726-7965 | 微信: xxxi_zc</span>
-                      <span class="lang-en">CC Art All Rights Reserved © 2025 | Contact: 626-726-7965 | WeChat: xxxi_zc</span>
+                      <span class="lang-zh">CC Art 版权所有 © 2025 | 咨询: 626-726-7965 | 微信: xxxi_zc 或 a747594101</span>
+                      <span class="lang-en">CC Art All Rights Reserved © 2025 | Contact: 626-726-7965 | WeChat: xxxi_zc 或 a747594101</span>
                     </p>
                 </div>
             </footer>
