--- a/gallery.html
+++ b/gallery.html
@@ -289,7 +289,7 @@
             </p>
             <div class="flex justify-center space-x-6 text-sm">
                 <span class="text-orange-400">📞 626-726-7965</span>
-                <span class="text-orange-400">💬 xxxi_zc</span>
+                <span class="text-orange-400">💬 xxxi_zc 或 a747594101</span>
                 <span class="text-orange-400">📧 ccartirvine@google.com</span>
             </div>
             <p class="text-gray-500 text-sm mt-4">
