--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                         <span class="lang-en">Course Packages</span>
                     </h2>
                     <p class="text-gray-600">
-                        <span class="lang-zh">选择最适合你的学习计划</span>
+                        <span class="lang-zh">选择最适合您孩子的学习计划</span>
                         <span class="lang-en">Choose the best learning plan for you</span>
                     </p>
                 </div>
