--- a/index.html
+++ b/index.html
@@ -689,6 +689,15 @@
                         </p>
                     </div>
                 </div>
+
+                    <!-- 地点 Section -->
+                <div class="flex justify-center mt-8">
+                    <div class="bg-orange-50 rounded-xl px-6 py-3 flex items-center space-x-3 shadow-md">
+                        <span class="text-orange-500 text-xl">📍</span>
+                        <span class="lang-zh font-semibold">Irvine Great Park 大公园</span>
+                        <span class="lang-en font-semibold">Irvine Great Park</span>
+                    </div>
+                </div>
             </div>
 
             <!-- Pricing Cards -->
@@ -1020,15 +1029,6 @@
                     <span class="lang-en">* Course prices subject to change. Latest announcements prevail | CC Art All Rights Reserved</span>
                 </p>
             </div>
-        </div>
-    </div>
-
-    <!-- 地点 Section -->
-    <div class="flex justify-center mt-8">
-        <div class="bg-orange-50 rounded-xl px-6 py-3 flex items-center space-x-3 shadow-md">
-            <span class="text-orange-500 text-xl">📍</span>
-            <span class="lang-zh font-semibold">Irvine Great Park 大公园</span>
-            <span class="lang-en font-semibold">Irvine Great Park (Da Gong Yuan)</span>
         </div>
     </div>
 
