--- a/pricing.html
+++ b/pricing.html
@@ -300,7 +300,15 @@
         } catch (e) {}
         renderPricing();
     }
+    // Mobile menu toggle
     document.addEventListener('DOMContentLoaded', function() {
+        const menuBtn = document.getElementById('mobile-menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
+        if (menuBtn && mobileMenu) {
+            menuBtn.addEventListener('click', function() {
+                mobileMenu.classList.toggle('hidden');
+            });
+        }
         loadLanguagePreference();
     });
     </script>
