--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                     <a href="index.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">首页</span><span class="lang-en">Home</span></a>
                     <a href="pricing.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">课价表</span><span class="lang-en">Pricing</span></a>
                     <a href="about.html" class="nav-link active px-4 py-2 text-white font-medium"><span class="lang-zh">关于老师</span><span class="lang-en">About Teacher</span></a>
-                    <a href="gallery.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">学员作品</span><span class="lang-en">Student Gallery</span></a>
+                    <a href="gallery.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">孩子作品</span><span class="lang-en">Student Gallery</span></a>
                     <a href="policy.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">课程政策</span><span class="lang-en">Course Policy</span></a>
                 </div>
 
@@ -97,7 +97,7 @@
                 <a href="index.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">首页</span><span class="lang-en">Home</span></a>
                 <a href="pricing.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">课价表</span><span class="lang-en">Pricing</span></a>
                 <a href="about.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">关于老师</span><span class="lang-en">About Teacher</span></a>
-                <a href="gallery.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">学员作品</span><span class="lang-en">Student Gallery</span></a>
+                <a href="gallery.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">孩子作品</span><span class="lang-en">Student Gallery</span></a>
                 <a href="policy.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">课程政策</span><span class="lang-en">Course Policy</span></a>
             </div>
         </div>
@@ -226,8 +226,8 @@
                     </h3>
                     <div class="space-y-6 text-gray-600 text-lg md:text-xl">
                         <p><span class="lang-zh">艺术不仅仅是技法的传授，更是创造力和想象力的启发。我相信每个孩子都有独特的艺术天赋，需要的是耐心的引导和专业的指导。</span><span class="lang-en">Art is not just about technique, but about inspiring creativity and imagination. I believe every child has unique artistic talent that needs patient guidance and professional instruction.</span></p>
-                        <p><span class="lang-zh">通过户外写生，让学员在大自然中感受色彩的变化、光影的魅力，培养敏锐的观察力和对美的感知能力。</span><span class="lang-en">Through outdoor sketching, students experience the changes of color and the charm of light and shadow in nature, cultivating keen observation and a sense of beauty.</span></p>
-                        <p><span class="lang-zh">结合我在3D艺术和传统绘画方面的专业背景，为学员提供多元化的艺术体验，开拓更广阔的创作视野。</span><span class="lang-en">Combining my background in 3D art and traditional painting, I offer students a diverse artistic experience and a broader creative vision.</span></p>
+                        <p><span class="lang-zh">通过户外写生，让孩子在大自然中感受色彩的变化、光影的魅力，培养敏锐的观察力和对美的感知能力。</span><span class="lang-en">Through outdoor sketching, students experience the changes of color and the charm of light and shadow in nature, cultivating keen observation and a sense of beauty.</span></p>
+                        <p><span class="lang-zh">结合我在3D艺术和传统绘画方面的专业背景，为孩子提供多元化的艺术体验，开拓更广阔的创作视野。</span><span class="lang-en">Combining my background in 3D art and traditional painting, I offer students a diverse artistic experience and a broader creative vision.</span></p>
                     </div>
                 </div>
 
@@ -250,7 +250,7 @@
                         </div>
                         <div class="flex items-center text-gray-600 text-lg">
                             <span class="w-3 h-3 bg-green-500 rounded-full mr-4"></span>
-                            <span class="lang-zh">小班制教学，个性化指导每位学员</span>
+                            <span class="lang-zh">小班制教学，个性化指导每位孩子</span>
                             <span class="lang-en">Small class teaching, personalized guidance for each student</span>
                         </div>
                         <div class="flex items-center text-gray-600 text-lg">
@@ -390,7 +390,7 @@
 
             <!-- Student Testimonials -->
             <!-- <div class="bg-white rounded-2xl shadow-lg p-10 mb-12">
-                <h3 class="text-3xl md:text-4xl font-bold text-gray-800 mb-10 text-center">学员评价</h3>
+                <h3 class="text-3xl md:text-4xl font-bold text-gray-800 mb-10 text-center">孩子评价</h3>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="bg-orange-50 rounded-xl p-8">
                         <div class="flex items-center mb-6">
@@ -472,7 +472,7 @@
                     </div>
                     <div class="aspect-square bg-gradient-to-br from-pink-100 to-red-100 rounded-lg flex items-center justify-center">
                         <span class="text-gray-600 text-base">
-                          <span class="lang-zh">学员指导照片</span>
+                          <span class="lang-zh">孩子指导照片</span>
                           <span class="lang-en">Student Instruction Photo</span>
                         </span>
                     </div>
@@ -587,7 +587,7 @@
                             </div>
                             <div>
                                 <select class="w-full px-5 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-400 focus:border-transparent text-base">
-                                    <option><span class="lang-zh">选择学员年龄</span><span class="lang-en">Select Age</span></option>
+                                    <option><span class="lang-zh">选择孩子年龄</span><span class="lang-en">Select Age</span></option>
                                     <option>3-5岁 / 3-5 yrs</option>
                                     <option>6-8岁 / 6-8 yrs</option>
                                     <option>9-12岁 / 9-12 yrs</option>
@@ -611,7 +611,7 @@
             <footer class="bg-gray-800 text-white py-10 mt-12">
                 <div class="max-w-7xl mx-auto px-6 text-center">
                     <p class="text-gray-400 mb-4 text-lg">
-                      <span class="lang-zh">用心教学，让每个学员都能发现艺术的美好</span>
+                      <span class="lang-zh">用心教学，让每个孩子都能发现艺术的美好</span>
                       <span class="lang-en">Dedicated teaching, helping every student discover the beauty of art</span>
                     </p>
                     <p class="text-gray-500 text-base">
