--- a/policy.html
+++ b/policy.html
@@ -61,7 +61,7 @@
                     <a href="index.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">首页</span><span class="lang-en">Home</span></a>
                     <a href="pricing.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">课价表</span><span class="lang-en">Pricing</span></a>
                     <a href="about.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">关于老师</span><span class="lang-en">About Teacher</span></a>
-                    <a href="gallery.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">学员作品</span><span class="lang-en">Student Gallery</span></a>
+                    <a href="gallery.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">孩子作品</span><span class="lang-en">Student Gallery</span></a>
                     <a href="policy.html" class="nav-link active px-4 py-2 text-white font-medium"><span class="lang-zh">课程政策</span><span class="lang-en">Course Policy</span></a>
                 </div>
                 <div class="md:hidden">
@@ -76,7 +76,7 @@
                 <a href="index.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">首页</span><span class="lang-en">Home</span></a>
                 <a href="pricing.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">课价表</span><span class="lang-en">Pricing</span></a>
                 <a href="about.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">关于老师</span><span class="lang-en">About Teacher</span></a>
-                <a href="gallery.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">学员作品</span><span class="lang-en">Student Gallery</span></a>
+                <a href="gallery.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">孩子作品</span><span class="lang-en">Student Gallery</span></a>
                 <a href="policy.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">课程政策</span><span class="lang-en">Course Policy</span></a>
             </div>
         </div>
@@ -114,7 +114,7 @@
                               <span class="lang-en">Trial Class Arrangement</span>
                             </h4>
                             <ul class="space-y-2">
-                                <li><span class="lang-zh">• 首次学员可参加 $25试课，体验课程内容和教学方式</span><span class="lang-en">• New students may attend a $25 trial class to experience the course content and teaching style</span></li>
+                                <li><span class="lang-zh">• 首次孩子可参加 $25试课，体验课程内容和教学方式</span><span class="lang-en">• New students may attend a $25 trial class to experience the course content and teaching style</span></li>
                                 <li><span class="lang-zh">• 试课包含所有材料费用，无额外收费</span><span class="lang-en">• The trial class includes all material fees, no extra charges</span></li>
                                 <li><span class="lang-zh">• 试课后可决定是否购买正式课程套餐</span><span class="lang-en">• After the trial, you may decide whether to purchase a regular course package</span></li>
                                 <li><span class="lang-zh">• 试课费用不可抵扣正式课程费用</span><span class="lang-en">• The trial class fee cannot be deducted from regular course fees</span></li>
@@ -128,8 +128,8 @@
                             <ul class="space-y-2">
                                 <li><span class="lang-zh">• 建议年龄：3岁及以上</span><span class="lang-en">• Recommended age: 3 years and above</span></li>
                                 <li><span class="lang-zh">• 3-5岁儿童需家长陪同</span><span class="lang-en">• Children aged 3-5 must be accompanied by a parent</span></li>
-                                <li><span class="lang-zh">• 成人课程欢迎零基础学员</span><span class="lang-en">• Adult classes welcome beginners</span></li>
-                                <li><span class="lang-zh">• 特殊需求学员请提前沟通</span><span class="lang-en">• Please communicate any special needs in advance</span></li>
+                                <li><span class="lang-zh">• 成人课程欢迎零基础孩子</span><span class="lang-en">• Adult classes welcome beginners</span></li>
+                                <li><span class="lang-zh">• 特殊需求孩子请提前沟通</span><span class="lang-en">• Please communicate any special needs in advance</span></li>
                             </ul>
                         </div>
                         <div class="border-l-4 border-blue-400 pl-6">
@@ -209,9 +209,9 @@
                             </h4>
                             <ul class="space-y-2">
                                 <li><span class="lang-zh">• 雨天、雪天或极端天气将自动改期</span><span class="lang-en">• Classes will be rescheduled in case of rain, snow, or extreme weather</span></li>
-                                <li><span class="lang-zh">• 老师会提前2-4小时通知学员</span><span class="lang-en">• Notification will be sent 2-4 hours in advance</span></li>
+                                <li><span class="lang-zh">• 老师会提前2-4小时通知孩子</span><span class="lang-en">• Notification will be sent 2-4 hours in advance</span></li>
                                 <li><span class="lang-zh">• 可免费改期至合适时间</span><span class="lang-en">• Free rescheduling to a suitable time</span></li>
-                                <li><span class="lang-zh">• 如学员坚持上课，将安排室内替代课程</span><span class="lang-en">• If students wish to continue, an indoor alternative will be arranged</span></li>
+                                <li><span class="lang-zh">• 如孩子坚持上课，将安排室内替代课程</span><span class="lang-en">• If students wish to continue, an indoor alternative will be arranged</span></li>
                             </ul>
                         </div>
                         <div class="border-l-4 border-green-400 pl-6">
@@ -221,7 +221,7 @@
                             </h4>
                             <ul class="space-y-2">
                                 <li><span class="lang-zh">• 小雨天气下可选择继续上课（有遮蔽处）</span><span class="lang-en">• In light rain, classes may continue in sheltered areas</span></li>
-                                <li><span class="lang-zh">• 学员可选择改期，不收取任何费用</span><span class="lang-en">• Students may choose to reschedule at no extra cost</span></li>
+                                <li><span class="lang-zh">• 孩子可选择改期，不收取任何费用</span><span class="lang-en">• Students may choose to reschedule at no extra cost</span></li>
                                 <li><span class="lang-zh">• 课程会根据天气调整内容</span><span class="lang-en">• Class content may be adjusted according to weather</span></li>
                                 <li><span class="lang-zh">• 安全第一，最终决定权在老师</span><span class="lang-en">• Safety first; the teacher has final authority</span></li>
                             </ul>
@@ -239,7 +239,7 @@
                     <div class="space-y-4 text-gray-600">
                         <div class="border-l-4 border-red-400 pl-6">
                             <h4 class="font-semibold text-gray-800 mb-2">
-                              <span class="lang-zh">学员安全</span>
+                              <span class="lang-zh">孩子安全</span>
                               <span class="lang-en">Student Safety</span>
                             </h4>
                             <ul class="space-y-2">
@@ -254,7 +254,7 @@
                               <span class="lang-en">Health Requirements</span>
                             </h4>
                             <ul class="space-y-2">
-                                <li><span class="lang-zh">• 学员身体不适时请勿上课</span><span class="lang-en">• Do not attend class if feeling unwell</span></li>
+                                <li><span class="lang-zh">• 孩子身体不适时请勿上课</span><span class="lang-en">• Do not attend class if feeling unwell</span></li>
                                 <li><span class="lang-zh">• 有传染性疾病时需居家休息</span><span class="lang-en">• Stay home if you have a contagious illness</span></li>
                                 <li><span class="lang-zh">• 特殊病史需提前告知老师</span><span class="lang-en">• Inform the teacher in advance of any special medical history</span></li>
                                 <li><span class="lang-zh">• 过敏体质请提前说明</span><span class="lang-en">• Please inform in advance if you have allergies</span></li>
@@ -350,8 +350,8 @@
                             </h4>
                             <ul class="space-y-2">
                                 <li><span class="lang-zh">• CC Art承担教学期间的基本安全责任</span><span class="lang-en">• CC Art is responsible for basic safety during class</span></li>
-                                <li><span class="lang-zh">• 学员个人物品遗失不承担责任</span><span class="lang-en">• Not responsible for loss of personal belongings</span></li>
-                                <li><span class="lang-zh">• 因学员个人原因造成的意外不承担责任</span><span class="lang-en">• Not responsible for accidents caused by students' own actions</span></li>
+                                <li><span class="lang-zh">• 孩子个人物品遗失不承担责任</span><span class="lang-en">• Not responsible for loss of personal belongings</span></li>
+                                <li><span class="lang-zh">• 因孩子个人原因造成的意外不承担责任</span><span class="lang-en">• Not responsible for accidents caused by students' own actions</span></li>
                                 <li><span class="lang-zh">• 建议购买个人意外保险</span><span class="lang-en">• Personal accident insurance is recommended</span></li>
                             </ul>
                         </div>
