--- a/pricing.html
+++ b/pricing.html
@@ -61,7 +61,7 @@
                     <a href="index.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">首页</span><span class="lang-en">Home</span></a>
                     <a href="pricing.html" class="nav-link active px-4 py-2 text-white font-medium"><span class="lang-zh">课价表</span><span class="lang-en">Pricing</span></a>
                     <a href="about.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">关于老师</span><span class="lang-en">About Teacher</span></a>
-                    <a href="gallery.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">学员作品</span><span class="lang-en">Student Gallery</span></a>
+                    <a href="gallery.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">孩子作品</span><span class="lang-en">Student Gallery</span></a>
                     <a href="policy.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">课程政策</span><span class="lang-en">Course Policy</span></a>
                 </div>
                 <div class="md:hidden">
@@ -76,7 +76,7 @@
                 <a href="index.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">首页</span><span class="lang-en">Home</span></a>
                 <a href="pricing.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">课价表</span><span class="lang-en">Pricing</span></a>
                 <a href="about.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">关于老师</span><span class="lang-en">About Teacher</span></a>
-                <a href="gallery.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">学员作品</span><span class="lang-en">Student Gallery</span></a>
+                <a href="gallery.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">孩子作品</span><span class="lang-en">Student Gallery</span></a>
                 <a href="policy.html" class="block nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">课程政策</span><span class="lang-en">Course Policy</span></a>
             </div>
         </div>
@@ -132,7 +132,7 @@
         price: '$25',
         total: '$25',
         discount: { zh: '体验价', en: 'Trial Price' },
-        audience: { zh: '首次体验/试课学员', en: 'First-timers/Trial students' },
+        audience: { zh: '首次体验/试课孩子', en: 'First-timers/Trial students' },
         material: true
       },
       {
@@ -212,7 +212,7 @@
       },
       {
         q: { zh: '兄弟姐妹可以共享课包吗？', en: 'Can siblings share a package?' },
-        a: { zh: '我们相信每位小朋友都是独一无二的创作者，因此每份课程包仅限一位学员使用，暂不支持共享哦，谢谢理解', en: 'We believe every child is a unique creator. For this reason, each course package is reserved for one individual student and cannot be shared. Thank you for your understanding' }
+        a: { zh: '我们相信每位小朋友都是独一无二的创作者，因此每份课程包仅限一位孩子使用，暂不支持共享哦，谢谢理解', en: 'We believe every child is a unique creator. For this reason, each course package is reserved for one individual student and cannot be shared. Thank you for your understanding' }
       }
     ];
     // Language state由data-lang决定
