--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>学员作品 - CC Art 户外丙烯写生课</title>
+    <title>孩子作品 - CC Art 户外丙烯写生课</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
@@ -156,7 +156,7 @@
                     <a href="index.html" class="nav-link px-4 py-2 text-white font-medium">首页</a>
                     <a href="pricing.html" class="nav-link px-4 py-2 text-white font-medium">课价表</a>
                     <a href="about.html" class="nav-link px-4 py-2 text-white font-medium">关于老师</a>
-                    <a href="gallery.html" class="nav-link active px-4 py-2 text-white font-medium">学员作品</a>
+                    <a href="gallery.html" class="nav-link active px-4 py-2 text-white font-medium">孩子作品</a>
                     <a href="policy.html" class="nav-link px-4 py-2 text-white font-medium">课程政策</a>
                 </div>
 
@@ -173,7 +173,7 @@
                 <a href="index.html" class="block nav-link px-4 py-2 text-white font-medium">首页</a>
                 <a href="pricing.html" class="block nav-link px-4 py-2 text-white font-medium">课价表</a>
                 <a href="about.html" class="block nav-link px-4 py-2 text-white font-medium">关于老师</a>
-                <a href="gallery.html" class="block nav-link px-4 py-2 text-white font-medium">学员作品</a>
+                <a href="gallery.html" class="block nav-link px-4 py-2 text-white font-medium">孩子作品</a>
                 <a href="policy.html" class="block nav-link px-4 py-2 text-white font-medium">课程政策</a>
             </div>
         </div>
@@ -184,7 +184,7 @@
         <div class="max-w-7xl mx-auto">
             <!-- Page Header -->
             <div class="text-center mb-12">
-                <h1 class="text-4xl font-bold text-gray-800 mb-4">学员作品展示</h1>
+                <h1 class="text-4xl font-bold text-gray-800 mb-4">孩子作品展示</h1>
                 <p class="text-lg text-gray-600 mb-6">见证每一次艺术成长的精彩瞬间</p>
                 <div class="w-24 h-1 bg-gradient-to-r from-orange-400 to-amber-400 mx-auto rounded-full"></div>
             </div>
@@ -213,11 +213,11 @@
                         </div>
                     </div>
                     <div class="bg-gradient-to-br from-orange-100 to-amber-100 rounded-2xl p-6">
-                        <h3 class="text-xl font-bold text-gray-800 mb-3">🎯 学员成就统计</h3>
+                        <h3 class="text-xl font-bold text-gray-800 mb-3">🎯 孩子成就统计</h3>
                         <div class="grid grid-cols-2 gap-4 text-center">
                             <div class="bg-white rounded-lg p-3">
                                 <div class="text-2xl font-bold text-orange-600">30+</div>
-                                <div class="text-sm text-gray-600">满意学员</div>
+                                <div class="text-sm text-gray-600">满意孩子</div>
                             </div>
                             <div class="bg-white rounded-lg p-3">
                                 <div class="text-2xl font-bold text-orange-600">100+</div>
@@ -693,7 +693,7 @@
                          class="lazy-load"
                          data-full-src="${item.src}"
                          data-title="${item.title}"
-                         data-description="${item.description} | 学员年龄: ${item.studentAge} | 创作日期: ${item.date}">
+                         data-description="${item.description} | 孩子年龄: ${item.studentAge} | 创作日期: ${item.date}">
                 </div>
                 <div class="p-4">
                     <h3 class="font-bold text-gray-800 mb-2">${item.title}</h3>
