--- a/policy.html
+++ b/policy.html
@@ -406,7 +406,15 @@
             }
         } catch (e) {}
     }
+    // Mobile menu toggle
     document.addEventListener('DOMContentLoaded', function() {
+        const menuBtn = document.getElementById('mobile-menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
+        if (menuBtn && mobileMenu) {
+            menuBtn.addEventListener('click', function() {
+                mobileMenu.classList.toggle('hidden');
+            });
+        }
         loadLanguagePreference();
     });
     </script>
